--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <!-- Open graph -->
-    <meta property="og:image" content="<%= BASE_URL %>logo.png" />
+    <meta property="og:image" content="<%= BASE_URL %>screenshot.png" />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@neutralitywtf" />
     <meta name="twitter:creator" content="@mooeypoo" />
-    <meta property="og:image" content="<%= BASE_URL %>logo.png" />
 
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Neutrality.WTF : Flip the script on Gendered Language</title>
